--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
       <div class="field">
     <%= f.label :country %><br />
-    <%= f.country_select :country, autofocus: true, autocomplete: "country" %>
+    <%= f.country_select :country, autofocus: true, autocomplete: "country", prompt: "Select a Country" %>
   </div>
 
   <div class="field">
