--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.header {
+    background-color: #b7410e;
+    
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .balance-box{
+        color: #fff;
+        background-color: maroon;
+        padding: 10px;
+        text-align: center;
+        
+        h4 {
+            font-size: .75rem;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+    }
+}
+
+.user-dashboard {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+.footer {
+    background-color: #b7410e;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    padding-top: 10px;
+    position: fixed;
+    bottom: 0;
+}
