--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -15,26 +15,36 @@
 <header class="header">
     <div class="container">
         <%= image_tag("arbank_white.png", class: "logo") %>
+        <% if current_user.has_account? %>
         <div class="balance-box">
         <h4>Account Balance</h4>
-        <h2>$205</div>
+        <h2><%= current_user.balance %></div>
         </div>
+        <% end %>
     </div>
 </header>
   <div class="navbar-dark bg-dark">
     <nav class="navbar navbar-expand-lg container">
         <div class=" navbar-collapse" id="navbarSupportedContent">
+        <% if current_user.has_account? %>
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Make Deposit</a>
+                <%= link_to 'Balance Enquiry', root_path, class: "nav-link"%>
+            </li>
+            <li class="nav-item active">
+                <%= link_to 'Make Deposit', deposit_path, class: "nav-link"%>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Withdraw</a>
+              <%= link_to 'Withdraw', withdraw_path, class: "nav-link"%>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Transaction History</a>
+                <%= link_to 'Transfer', transfer_path, class: "nav-link"%>
+            </li>
+            <li class="nav-item">
+               <%= link_to 'Transaction History', transaction_path, class: "nav-link"%>
             </li>
             </ul>
+            <% end %>
         </div>
         <%= button_to "logout", destroy_user_session_path, method: :delete, class: "btn btn-danger"  %>
     </nav>
