--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,80 +1,81 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name" %>
+<div class="container">
+<div class="login-box reg">
+  <div class="login-top text-center">
+  <%= image_tag("arbank_white.png", class: "logo mb-2") %>
+   <h4>Sign Up</h4>
   </div>
 
-    <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name" %>
-  </div>
+  <div class="form-box">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name", placeholder: "First Name", class: "form-control" %>
+              </div>
 
-      <div class="field">
-    <%= f.label :country %><br />
-    <%= f.country_select :country, autofocus: true, autocomplete: "country", prompt: "Select a Country" %>
-  </div>
+                <div class="form-group mb-4">
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name", placeholder: "Last Name", class: "form-control" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state, autofocus: true, autocomplete: "state" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: "Username", class: "form-control" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true, autocomplete: "city" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.country_select :country, autofocus: true, autocomplete: "country", prompt: "Select a Country", class: "form-control" %>
+              </div>
 
-   <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :state, autofocus: true, autocomplete: "state", placeholder: "State", class: "form-control" %>
+              </div>
 
-     <div class="field">
-    <%= f.label :security_question %><br />
-    <%= f.text_field :security_question, autofocus: true, autocomplete: "security_question" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :city, autofocus: true, autocomplete: "city", placeholder: "City", class: "form-control" %>
+              </div>
 
-     <div class="field">
-    <%= f.label :security_answer %><br />
-    <%= f.text_field :security_answer, autofocus: true, autocomplete: "security_answer" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: "Address", class: "form-control" %>
+              </div>
+
+              <div class="form-group mb-4">
+                <%= f.text_field :security_question, autofocus: true, autocomplete: "security_question", placeholder: "Security Question", class: "form-control" %>
+              </div>
+
+              <div class="form-group mb-4">
+                <%= f.text_field :security_answer, autofocus: true, autocomplete: "security_answer", placeholder: "Security Answer", class: "form-control" %>
+              </div>
 
 
-     <div class="field">
-    <%= f.label :phone_number %><br />
-    <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number", placeholder: "Phone Number", class: "form-control" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
+              <div class="form-group mb-4">
+                <%= f.email_field :email, autocomplete: "email", placeholder: "Email", class: "form-control" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+                <div class="form-group mb-4">
+                  <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "form-control" %>
+                </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+                <div class="form-group mb-4">
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm Password", class: "form-control" %>
+                </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+              <div class="loginbttm mt-4">
+                <div class="col-lg-6 login-btm login-text">
+                </div>
+                <div class="login-btm login-button">
+                  <%= f.submit "Sign up", class: "btn btn-danger pr-2" %>
+                  <p><em>Already have account?</em> <%= link_to 'Login', new_session_path(resource_name), class: "raya-link" %></p>
+                </div>
+              </div>
+            <% end %>
+    </div>
+    <%= link_to "Forgot your password?", new_password_path(resource_name), class: "raya-link" %>
+    </div>
+</div>
