--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 
-  <body>
-
+  <body class="app-body">
+<!--
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
+-->
     <%= yield %>
   </body>
 </html>
