Update styles for login

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -1,5 +1,5 @@
 .app-body {
-    background: url('tweed.png');
+    background: url(asset-path('tweed.png'));
     font-family: 'Roboto', sans-serif;
 }
 
