--- a/app/views/dashboard/transfer.html.erb
+++ b/app/views/dashboard/transfer.html.erb
@@ -1,5 +1,6 @@
 <section class="user-dashboard container mt-4">
-   <%= render 'welcome' %>
+      <h1><strong>Transfer</strong> Funds </h1>
+    <%= render 'last_login' %>
 
 <div class="mt-4">
    <h4>Make Transfer</h4>
