--- a/app/views/dashboard/deposit.html.erb
+++ b/app/views/dashboard/deposit.html.erb
@@ -1,12 +1,19 @@
 <section class="user-dashboard container mt-4">
-   <%= render 'welcome' %>
+      <h1><strong>Deposit</strong> Funds </h1>
+      <%= render 'last_login' %>
 
-   <form class="mt-4 col-sm">
+  <div class="mt-4">
    <h4>Make Deposit</h4>
+  <p> Please contact our Foreign Operations Department, for your FTS code </p>
+  </div>
+  <!-- 
+   <form class="mt-4 col-sm">
   <div class="form-group">
     <input class="form-control" type="text" placeholder="Enter Amount">
   </div>
   <button type="submit" class="btn btn-danger mt-2">Submit</button>
 </form>
+-->
+
 
 </section>
