--- a/app/views/dashboard/transaction.html.erb
+++ b/app/views/dashboard/transaction.html.erb
@@ -1,12 +1,14 @@
 <section class="user-dashboard container mt-4">
-   <%= render 'welcome' %>
+   <h1><strong>Transaction</strong> History </h1>
+   <%= render 'last_login' %>
 
-           <table class="table table-bordered table-responsive table-striped table-hover table-sm">
+           <table class="mt-4 table table-bordered table-responsive table-striped table-hover table-sm">
                 <thead>
                 <tr>
                     <th scope="col">Description</th>
                     <th scope="col">Debits</th>
                     <th scope="col">Credits</th>
+                    <th scope="col">Date</th>
                 </tr>
                 </thead>
 
@@ -17,6 +19,7 @@
                         <td><%= transaction.description %></td>
                         <td><%= transaction.debits %></td>
                         <td><%= transaction.credits %></td>
+                        <td><%= transaction.created_at.strftime('%d %B %Y - %I:%M%p') %></td>
                     </tr>
                     <% end %>
                 <% end %>
