--- a/app/views/dashboard/transaction.html.erb
+++ b/app/views/dashboard/transaction.html.erb
@@ -19,7 +19,7 @@
                         <td><%= transaction.description %></td>
                         <td><%= transaction.debits %></td>
                         <td><%= transaction.credits %></td>
-                        <td><%= transaction.created_at.strftime('%d %B %Y - %I:%M%p') %></td>
+                        <td><%= transaction.transaction_date.strftime('%d %B %Y - %I:%M%p') %></td>
                     </tr>
                     <% end %>
                 <% end %>
