Add logo and title ref

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="login-box">
   <div class="login-top text-center">
-  <%= image_tag("arbank_white.png", class: "logo mb-2") %>
+  <%= image_tag("alq_logo_dark.png", class: "logo mb-2") %>
    <h4>Forgot your password?</h4>
   </div>
 
