--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 <div class="login-box reg">
   <div class="login-top text-center">
-  <%= image_tag("arbank_white.png", class: "logo mb-2") %>
+  <%= image_tag("alq_logo_dark.png", class: "logo mb-2") %>
    <h4>Sign Up</h4>
   </div>
 
