--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .header {
-    background-color: #b7410e;
+    background-color: #3859b9;
     
     .container {
         display: flex;
@@ -13,7 +13,7 @@
 
     .balance-box{
         color: #fff;
-        background-color: maroon;
+        background-color: #1e3d9c;
         padding: 10px;
         text-align: center;
         
@@ -35,7 +35,7 @@
 }
 
 .footer {
-    background-color: #b7410e;
+    background-color: #3859b9;
     width: 100%;
     height: 50px;
     display: flex;
@@ -47,11 +47,11 @@
 }
 
 .raya-link {
-    color: #b7410e;
+    color: #3859b9;
     text-decoration: none;
 
     &:hover {
         font-weight: bold;
-        color: #b7410e;
+        color: #3859b9;
     }
 }
